fix: fix bug not show animation bg

--- a/index.html
+++ b/index.html
@@ -398,7 +398,8 @@
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
     <!-- stats.js lib --> 
-    <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
+    
 
     <script src="script.js"></script>
     <script src="./animation.js"></script>
