--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
     </footer>
    
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+    <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
     <!-- stats.js lib --> 
-    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
     
 
     <script src="script.js"></script>
