--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="./assets/avatar.png"/>
-    <title>My Portfolio</title>
+    <title>Hue Nguyen - Portfolio</title>
     <link rel="stylesheet" href="./src/css/style.css" />
     <link rel="stylesheet" href="./src/css/mediaqueries.css" />
     <link rel="stylesheet" href="./src/css/animation.css">
@@ -22,7 +22,7 @@
 
     <!--font awesome bootstrap CDN-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    
+
   </head>
   <body>
     <nav id="desktop-nav">
@@ -94,7 +94,7 @@
       
     </section>
 
-    <section id="about">
+    <section id="about" class="slide-up">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
@@ -128,7 +128,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Major - Software Engineer</p>
+              <p>Major - Software Engineering</p>
               <p>University of Information Technology</p>
             </div>
           </div>
@@ -158,7 +158,7 @@
       />
     </section>
 
-    <section id="skill">
+    <section id="skill" class="slide-up">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Skills</h1>
       <div class="experience-details-container">
@@ -283,13 +283,13 @@
       />
     </section>
 
-    <section id="work-experience">
+    <section id="work-experience" class="slide-up">
       <h1 class="title">Work Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
             <h2 class="experience-sub-title">Frontend Developer Internship</h2>
-            <h3>09/2023 - 12/2023 - Company:  “TNHH TMDV XNK Quang Hải”</h3>
+            <h3>09/2023 - 12/2023 - Quang Hai Import-Export Trading Service Co., Ltd.</h3>
             <div class="article-container">
               <ul class="experience-content">
                 <li>Developed client-side features for web applications using ReactJS and Ionic Framework.</li>
@@ -313,7 +313,7 @@
       />
     </section>
 
-    <section id="projects">
+    <section id="projects" class="slide-up">
       <div class="projects-container">
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
@@ -453,7 +453,7 @@
       </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="slide-up">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
       <div class="contact-info-upper-container">
